# changepoint_online

./: README.md  generate_README_file.qmd  references.bib  render_README.sh
.github/workflows/: python-package.yml  render_quarto_README  render_quarto_README.yml
examples/: Pump_Sensor_Data_Analysis.html  Pump_Sensor_Data_Analysis.md  README.md  README.qmd  constrained_spike_inference.ipynb  constrained_spike_inference.md  constrained_spike_inference.qmd  energy_wholesale.html  energy_wholesale.ipynb  energy_wholesale.md  energy_wholesale.qmd  generate_README_file.qmd
examples/data/: agile-half-hour-actual-rates-01-01-2023_28-02-2024.csv  agile-half-hour-actual-rates.csv  example_trace.pkl
latex/: article.tex  refs.bib
notes/: github-repository-list.txt
python/: changepoint-online.py  changepoint_online.py
python/notebooks/: comparison_python.Rmd  examples.ipynb  interface-development.ipynb  ocd-example.ipynb  updown_test.ipynb
python/package/: README.md  pyproject.toml
python/package/changepoint_online/: __init__.py  focus.py  mdfocus.py  nunc.py  ocd.py
python/package/changepoint_online.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/package/changepoint_online/tests/: runtests.py
