[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "changepoint_online"
version = "1.1.0"
authors = [
  { name="Daniel Grose", email="dan.grose@lancaster.ac.uk" },
  { name="Gaetano Romano", email="g.romano@lancaster.ac.uk" }
]
maintainers = [
  { name="Idris A. Eckley", email="i.eckley@lancaster.ac.uk"},
  { name="Paul Fearnhead", email="p.fearnhead@lancaster.ac.uk"},
  { name="Daniel Grose", email="dan.grose@lancaster.ac.uk"},
  { name="Liudmila Pishchagina", email="liudmila.pishchagina@univ-evry.fr"},
  { name="Guillem Rigaill", email="guillem.rigaill@inrae.fr"},
  { name="Gaetano Romano", email="g.romano@lancaster.ac.uk"},
  { name="Vincent Runge", email="vincent.runge@univ-evry.fr"},
  { name="Kes Ward", email="k.ward4@lancaster.ac.uk"},
]
description = "A Collection of Methods for Online Changepoint Detection"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy",
    "numpy"
]

[project.urls]
homepage = "https://github.com/grosed/changepoint_online"

