[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "changepoint_online"
version = "1.2.1"
maintainers = [
  { name="Daniel Grose", email="dan.grose@lancaster.ac.uk" },
  { name="Gaetano Romano", email="g.romano@lancaster.ac.uk" }
]
authors = [
  { name="Gaetano Romano", email="g.romano@lancaster.ac.uk"},
  { name="Daniel Grose", email="dan.grose@lancaster.ac.uk"},
  { name="Kes Ward", email="k.ward4@lancaster.ac.uk"},
  { name="Edward Austin", email="e.austin@lancaster.ac.uk"},
  { name="Liudmila Pishchagina", email="liudmila.pishchagina@univ-evry.fr"},
  { name="Guillem Rigaill", email="guillem.rigaill@inrae.fr"},
  { name="Vincent Runge", email="vincent.runge@univ-evry.fr"},
  { name="Paul Fearnhead", email="p.fearnhead@lancaster.ac.uk"},
  { name="Idris A. Eckley", email="i.eckley@lancaster.ac.uk"},
]
description = "A Collection of Online Methods for Changepoint and Anomaly Detection"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy",
    "numpy",
    "sortedcontainers",
]

[project.urls]
homepage = "https://github.com/grosed/changepoint_online"

